Statment parse to backend
